--- a/Semana3-clase1/ejercicio-1/index.html
+++ b/Semana3-clase1/ejercicio-1/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/main.css">
-    <title>Document</title>
+    <title>Ejercicio1 - Email.template</title>
 </head>
 <body>
     <header>
@@ -58,8 +58,8 @@
                 Install the Blush plugin to customize all the illustrations!
                 <br><br>
                 Create the coolest emails!</p>
-            <div>
-                
+            <div class="divition">
+                <!--DIVITION-->
             </div>
         </section>
     </main>
@@ -70,11 +70,11 @@
             You are receiving this email because you opted in via our website.
         </p>
         <div class="social-media">
-            <a href=""><img src="./img/twitter.png" alt="twitter"></a>
-            <a href=""><img src="./img/instagram.png" alt="instagram"></a>
-            <a href=""><img src="./img/youtube.png" alt="youtube"></a>
-            <a href=""><img src="./img/web.png" alt="web"></a>
-            <a href=""><img src="./img/linkedin.png" alt="linkedin"></a>
+            <a href="https://www.twitter.com"><img src="./img/twitter.png" alt="twitter"></a>
+            <a href="https://www.instagram.com"><img src="./img/instagram.png" alt="instagram"></a>
+            <a href="https://www.youtube.com"><img src="./img/youtube.png" alt="youtube"></a>
+            <a href="https://www.google.com"><img src="./img/web.png" alt="web"></a>
+            <a href="https://www.linkedin.com"><img src="./img/linkedin.png" alt="linkedin"></a>
         </div>
         <address>Address, #PC <br> City, State.</address>
         <a href="">Unsubscribe</a>
