--- a/Proyectos/proyecto-2/index.html
+++ b/Proyectos/proyecto-2/index.html
@@ -98,34 +98,34 @@
         <section class="service">
             <h2>Servicios</h2>
             <div class="container">
-            <div class="service-container">
-                <div class="each-service">
-                    <img src="./img/Vector.png" alt="CheckIMG">
-                    <h3>Diseño Web</h3>
+                <div class="service-container">
+                    <div class="each-service">
+                        <img src="./img/Vector.png" alt="CheckIMG">
+                        <h3>Diseño Web</h3>
+                    </div>
+                    <div class="each-service">
+                        <img src="./img/Vector.png" alt="CheckIMG">
+                        <h3>Desarrollo Web</h3>
+                    </div>          
+                    <div class="each-service">
+                        <img src="./img/Vector.png" alt="CheckIMG">
+                        <h3>Desarrollo Mobile</h3>
+                    </div>
                 </div>
-                <div class="each-service">
-                    <img src="./img/Vector.png" alt="CheckIMG">
-                    <h3>Desarrollo Web</h3>
-                </div>          
-                <div class="each-service">
-                    <img src="./img/Vector.png" alt="CheckIMG">
-                    <h3>Desarrollo Mobile</h3>
+                <div class="service-container">
+                    <div class="each-service">
+                        <img src="./img/Vector.png" alt="CheckIMG">
+                        <h3>Diseño UI</h3>
+                    </div>
+                    <div class="each-service">
+                        <img src="./img/Vector.png" alt="CheckIMG">
+                        <h3>Diseño UX</h3>
+                    </div>
+                    <div class="each-service">
+                        <img src="./img/Vector.png" alt="CheckIMG">
+                        <h3>Metodologias agiles</h3>
+                    </div>
                 </div>
-            </div>
-            <div class="service-container">
-                <div class="each-service">
-                    <img src="./img/Vector.png" alt="CheckIMG">
-                    <h3>Diseño UI</h3>
-                </div>
-                <div class="each-service">
-                    <img src="./img/Vector.png" alt="CheckIMG">
-                    <h3>Diseño UX</h3>
-                </div>
-                <div class="each-service">
-                    <img src="./img/Vector.png" alt="CheckIMG">
-                    <h3>Metodologias agiles</h3>
-                </div>
-            </div>
             </div>
         </section>
         <section class="portfolio">
@@ -135,6 +135,8 @@
                 <li><img src="./img/port2.png" alt="portfolio2"></li>
                 <li><img src="./img/port3.png" alt="portfolio3"></li>
                 <li><img src="./img/port4.png" alt="portfolio4"></li>
+            </ol>
+            <ol>
                 <li><img src="./img/port5.png" alt="portfolio5"></li>
                 <li><img src="./img/port6.png" alt="portfolio6"></li>
                 <li><img src="./img/port7.png" alt="portfolio7"></li>
@@ -143,7 +145,7 @@
         </section>
         <section class="clients">
             <h2>Clientes</h2>
-                <ol>
+                <ol class="list-clients">
                     <li><a href="https://fermedyp.com/" target="_blank"><img src="./img/client1.png" alt="client1"></a></li>
                     <li><a href="https://www.dotmatics.com/" target="_blank"><img src="./img/client2.png" alt="client2"></a></li>
                     <li><a href="https://fermedyp.com/" target="_blank"><img src="./img/client3.png" alt="client3"></a></li>
