--- a/Proyectos/proyecto-2/index.html
+++ b/Proyectos/proyecto-2/index.html
@@ -156,20 +156,29 @@
             <h2>Contacto</h2>
             <form method="GET" class="form-container">               
                     <div class="input-container">
-                        <input name="name" type="text" placeholder="Nombre" required> 
-                        <input name="last-name" type="text" placeholder="Apellido" required>
+                        <div class="input-content">
+                            <input name="name" type="text" placeholder="Nombre" required> 
+                        </div>
+                        <div class="input-content">
+                            <input name="last-name" type="text" placeholder="Apellido" required>
+                        </div>                
                     </div> 
                     <div class="input-container">
-                        <input name="email" type="email" placeholder="Email" required>
-                        <input name="phone" type="tel" placeholder="Telefono" required>
+                        <div class="input-content"> 
+                            <input name="email" type="email" placeholder="Email" required></div>
+                        <div class="input-content">
+                            <input name="phone" type="tel" placeholder="Telefono" required>
+                        </div>  
                     </div>
                     <div class="textarea-container">
-                        <textarea id="text" name="text" placeholder="Ingrese un texto sobre usted" maxlength="250" minlength="30"></textarea>
-                        <div class="button-container">
-                            <button type="submit">ENVIAR</button>
-                        </div>
-                    </div>
+                        <div class="textarea-content">
+                            <textarea id="text" name="text"placeholder="  Ingrese un texto" maxlength="250" minlength="30"></textarea>
+                        </div>                        
+                    </div>                  
             </form>
+            <div class="button-container">
+                <button type="submit">ENVIAR</button>
+            </div>
         </section>
        
     </main>
