--- a/Semana4-clase4/keyframes.html
+++ b/Semana4-clase4/keyframes.html
@@ -4,18 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css/reset.css">
     <link rel="stylesheet" href="./style.css/pacman.css">
     <title>Portfolio</title>
 </head>
-<body>
-    <div class="header">
+<body class="">
+    <div class="header flex">
         <h1>PACMAN</h1>
     </div>
-    <div class="pac-cont">
-        <div class="pacman">
-            <div class="pac-eyes"></div>
-            <div class="pac-eyes"></div>
+    <main class="grid">      
+        <div class="ghs-cont size">
+            <div class="ghost color">
+             <!--   <div class="food-ghs"></div>
+                <div class="food-ghs"></div>
+                <div class="food-ghs"></div>
+                <div class="food-ghs"></div>
+                <div class="food-ghs"></div>
+                <div class="food-ghs"></div>
+                <div class="food-ghs"></div>
+                <div class="food-ghs"></div>  
+                <div class="food-ghs"></div>
+                <div class="food-ghs"></div>
+                <div class="food-ghs"></div>
+                <div class="food-ghs"></div>   -->              
+                <div class="eyes-cont flex">
+                        <div class="ghs-eyes">
+                            <div class="pupils"></div>
+                        </div>           
+                        <div class="ghs-eyes">
+                            <div class="pupils"></div>
+                        </div>
+                    </div>
+                <div class="feets-cont">
+                        <div class="ghs-feets flex">
+                            <div class="feets"></div>
+                            <div class="feets"></div>
+                            <div class="feets"></div>
+                            <div class="feets"></div>
+                            <div class="feets"></div>
+                        </div>  
+                    </div>    
+            </div>
         </div>
-    </div>
+        <div class="pacman-cont movement add-flex"> 
+            <div class="pacman">
+                <div class="eye"></div>
+                <div class="mouth eat"></div>
+                <div class="food"></div>
+                <div class="food-m"></div>
+            </div>
+        </div>   
+    </main>   
 </body>
 </html>
