--- a/Semana4-clase4/keyframes.html
+++ b/Semana4-clase4/keyframes.html
@@ -46,7 +46,7 @@
                     </div>    
             </div>
         </div>
-        <div class="pacman-cont movement add-flex"> 
+        <div class="pacman-cont movement add-flex size-d"> 
             <div class="pacman">
                 <div class="eye"></div>
                 <div class="mouth eat"></div>
