--- a/Semana4-clase4/keyframes.html
+++ b/Semana4-clase4/keyframes.html
@@ -11,11 +11,13 @@
     <div class="header">
         <h1>PACMAN</h1>
     </div>
-    <div class="pac-cont">
-        <div class="pacman">
-            <div class="pac-eyes"></div>
-            <div class="pac-eyes"></div>
+    <div class="">
+        <div class="pac-cont">
+            <div class="pacman">
+                <div class="pac-eyes"></div>
+                <div class="pac-eyes"></div>
+            </div>
         </div>
-    </div>
+    </div>    
 </body>
 </html>
