--- a/Semana5-clase4/index.html
+++ b/Semana5-clase4/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="../Proyectos/proyecto-3/fonts/font-awesome/css/all.css">
+    <link rel="stylesheet" href="./style/main.css">   
     <title>Document</title>
 </head>
 <body>
@@ -14,8 +15,150 @@
         </div>
     </header>
     <main>
-        <div class="search-container">
-
+        <div class="container">
+            <div class="search-container">
+                <i class="fas fa-briefcase"></i>
+                <input class="input" type="search" placeholder="Title, companies, expertise or benefits">
+                <button class="btn">Search</button>
+            </div>
+        </div>
+        <div class="container-filter-jobs">
+            <div class="filter">
+                <div class="checkbox">
+                    <input type="checkbox" name="_checkbox" id="_checkbox">
+                    <label for="_checkbox"> Full time</label>
+                </div>
+                <h3>LOCATION</h3>
+                <div class="search-container">
+                    <i class="fas fa-globe-americas"></i>
+                    <input class="input" type="text" placeholder="City, state, zip code or country">
+                </div>
+                <div class="radio-options">
+                    <input type="radio" name="london" id="london">
+                    <label for="london">London</label><br>
+                    <input type="radio" name="amsterdam" id="amsterdam">
+                    <label for="amsterdam">Amsterdam</label><br>
+                    <input type="radio" name="new_york" id="new_york">
+                    <label for="new_york">New York</label><br>
+                    <input type="radio" name="berlin" id="berlin">
+                    <label for="berlin">Berlin</label><br>
+                </div>
+            </div>
+            <div class="jobs">
+                <div class="job-offer-container">
+                    <div class="cards-container">
+                        <div class="card">
+                            <div class="card-img-info">
+                                <div class="card-img">
+                                    <img src="https://picsum.photos/90/90" alt="">
+                                </div>
+                                <div class="card-info">
+                                    <h3>Kasisto</h3>
+                                    <h2>Front-End Software Engineer</h2>
+                                    <button class="btn-time">Full time</button>
+                                </div>
+                            </div>                       
+                            <div class="card-location-time">
+                                <div class="location">
+                                    <i class="fas fa-globe-americas"><span> New York</span></i>
+                                    <i class="far fa-clock"><span> 5 days ago</span></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards-container">
+                        <div class="card">
+                            <div class="card-img-info">
+                                <div class="card-img">
+                                    <img src="https://picsum.photos/90/90" alt="">
+                                </div>
+                                <div class="card-info">
+                                    <h3>Kasisto</h3>
+                                    <h2>Front-End Software Engineer</h2>
+                                    <button class="btn-time">Full time</button>
+                                </div>
+                            </div>                       
+                            <div class="card-location-time">
+                                <div class="location">
+                                    <i class="fas fa-globe-americas"><span> New York</span></i>
+                                    <i class="far fa-clock"><span> 5 days ago</span></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards-container">
+                        <div class="card">
+                            <div class="card-img-info">
+                                <div class="card-img">
+                                    <img src="https://picsum.photos/90/90" alt="">
+                                </div>
+                                <div class="card-info">
+                                    <h3>Kasisto</h3>
+                                    <h2>Front-End Software Engineer</h2>
+                                    <button class="btn-time">Full time</button>
+                                </div>
+                            </div>                       
+                            <div class="card-location-time">
+                                <div class="location">
+                                    <i class="fas fa-globe-americas"><span> New York</span></i>
+                                    <i class="far fa-clock"><span> 5 days ago</span></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards-container">
+                        <div class="card">
+                            <div class="card-img-info">
+                                <div class="card-img">
+                                    <img src="https://picsum.photos/90/90" alt="">
+                                </div>
+                                <div class="card-info">
+                                    <h3>Kasisto</h3>
+                                    <h2>Front-End Software Engineer</h2>
+                                    <button class="btn-time">Full time</button>
+                                </div>
+                            </div>                       
+                            <div class="card-location-time">
+                                <div class="location">
+                                    <i class="fas fa-globe-americas"><span> New York</span></i>
+                                    <i class="far fa-clock"><span> 5 days ago</span></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards-container">
+                        <div class="card">
+                            <div class="card-img-info">
+                                <div class="card-img">
+                                    <img src="https://picsum.photos/90/90" alt="">
+                                </div>
+                                <div class="card-info">
+                                    <h3>Kasisto</h3>
+                                    <h2>Front-End Software Engineer</h2>
+                                    <button class="btn-time">Full time</button>
+                                </div>
+                            </div>                       
+                            <div class="card-location-time">
+                                <div class="location">
+                                    <i class="fas fa-globe-americas"><span> New York</span></i>
+                                    <i class="far fa-clock"><span> 5 days ago</span></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+                
+                <div class="btn-pages">
+                    <button class="btn-numb"><</button>
+                    <button class="btn-numb">1</button>
+                    <button class="btn-numb">2</button>
+                    <button class="btn-numb">3</button>
+                    <button class="btn-numb">4</button>
+                    <button class="btn-numb">...</button>
+                    <button class="btn-numb">10</button>
+                    <button class="btn-numb">></button>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
