--- a/Semana5-clase4/index.html
+++ b/Semana5-clase4/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Proyectos/proyecto-3/fonts/font-awesome/css/all.css">
     <link rel="stylesheet" href="./style/main.css">   
-    <title>Document</title>
+    <title>Github Jobs</title>
 </head>
 <body>
     <header>
@@ -18,7 +18,9 @@
         <div class="container">
             <div class="search-container">
                 <i class="fas fa-briefcase"></i>
-                <input class="input" type="search" placeholder="Title, companies, expertise or benefits">
+                <input class="input input__small" type="search" placeholder="Title, companies, exp...">
+                <input class="input input__medium" type="search" placeholder="Title, companies, experti...">
+                <input class="input input__large" type="search" placeholder="Title, companies, expertise or benefits">
                 <button class="btn">Search</button>
             </div>
         </div>
@@ -47,104 +49,114 @@
             <div class="jobs">
                 <div class="job-offer-container">
                     <div class="cards-container">
-                        <div class="card">
-                            <div class="card-img-info">
-                                <div class="card-img">
-                                    <img src="https://picsum.photos/90/90" alt="">
-                                </div>
-                                <div class="card-info">
-                                    <h3>Kasisto</h3>
-                                    <h2>Front-End Software Engineer</h2>
-                                    <button class="btn-time">Full time</button>
-                                </div>
-                            </div>                       
-                            <div class="card-location-time">
-                                <div class="location">
-                                    <i class="fas fa-globe-americas"><span> New York</span></i>
-                                    <i class="far fa-clock"><span> 5 days ago</span></i>
+                        <a href="./job-info.html">
+                            <div class="card">
+                                <div class="card-img-info">
+                                    <div class="card-img">
+                                        <img src="https://picsum.photos/90/90" alt="">
+                                    </div>
+                                    <div class="card-info">
+                                        <h3>Kasisto</h3>
+                                        <h2>Front-End Software Engineer</h2>
+                                        <button class="btn-time">Full time</button>
+                                    </div>
+                                </div>                       
+                                <div class="card-location-time">
+                                    <div class="location">
+                                        <i class="fas fa-globe-americas"><span> New York</span></i>
+                                        <i class="far fa-clock"><span> 5 days ago</span></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>                       
                     </div>
                     <div class="cards-container">
-                        <div class="card">
-                            <div class="card-img-info">
-                                <div class="card-img">
-                                    <img src="https://picsum.photos/90/90" alt="">
-                                </div>
-                                <div class="card-info">
-                                    <h3>Kasisto</h3>
-                                    <h2>Front-End Software Engineer</h2>
-                                    <button class="btn-time">Full time</button>
-                                </div>
-                            </div>                       
-                            <div class="card-location-time">
-                                <div class="location">
-                                    <i class="fas fa-globe-americas"><span> New York</span></i>
-                                    <i class="far fa-clock"><span> 5 days ago</span></i>
+                        <a href="./job-info.html">
+                            <div class="card">
+                                <div class="card-img-info">
+                                    <div class="card-img">
+                                        <img src="https://picsum.photos/90/90" alt="">
+                                    </div>
+                                    <div class="card-info">
+                                        <h3>Kasisto</h3>
+                                        <h2>Front-End Software Engineer</h2>
+                                        <button class="btn-time">Full time</button>
+                                    </div>
+                                </div>                       
+                                <div class="card-location-time">
+                                    <div class="location">
+                                        <i class="fas fa-globe-americas"><span> New York</span></i>
+                                        <i class="far fa-clock"><span> 5 days ago</span></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="cards-container">
-                        <div class="card">
-                            <div class="card-img-info">
-                                <div class="card-img">
-                                    <img src="https://picsum.photos/90/90" alt="">
-                                </div>
-                                <div class="card-info">
-                                    <h3>Kasisto</h3>
-                                    <h2>Front-End Software Engineer</h2>
-                                    <button class="btn-time">Full time</button>
-                                </div>
-                            </div>                       
-                            <div class="card-location-time">
-                                <div class="location">
-                                    <i class="fas fa-globe-americas"><span> New York</span></i>
-                                    <i class="far fa-clock"><span> 5 days ago</span></i>
+                        <a href="./job-info.html">
+                            <div class="card">
+                                <div class="card-img-info">
+                                    <div class="card-img">
+                                        <img src="https://picsum.photos/90/90" alt="">
+                                    </div>
+                                    <div class="card-info">
+                                        <h3>Kasisto</h3>
+                                        <h2>Front-End Software Engineer</h2>
+                                        <button class="btn-time">Full time</button>
+                                    </div>
+                                </div>                       
+                                <div class="card-location-time">
+                                    <div class="location">
+                                        <i class="fas fa-globe-americas"><span> New York</span></i>
+                                        <i class="far fa-clock"><span> 5 days ago</span></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="cards-container">
-                        <div class="card">
-                            <div class="card-img-info">
-                                <div class="card-img">
-                                    <img src="https://picsum.photos/90/90" alt="">
-                                </div>
-                                <div class="card-info">
-                                    <h3>Kasisto</h3>
-                                    <h2>Front-End Software Engineer</h2>
-                                    <button class="btn-time">Full time</button>
-                                </div>
-                            </div>                       
-                            <div class="card-location-time">
-                                <div class="location">
-                                    <i class="fas fa-globe-americas"><span> New York</span></i>
-                                    <i class="far fa-clock"><span> 5 days ago</span></i>
+                        <a href="./job-info.html">
+                            <div class="card">
+                                <div class="card-img-info">
+                                    <div class="card-img">
+                                        <img src="https://picsum.photos/90/90" alt="">
+                                    </div>
+                                    <div class="card-info">
+                                        <h3>Kasisto</h3>
+                                        <h2>Front-End Software Engineer</h2>
+                                        <button class="btn-time">Full time</button>
+                                    </div>
+                                </div>                       
+                                <div class="card-location-time">
+                                    <div class="location">
+                                        <i class="fas fa-globe-americas"><span> New York</span></i>
+                                        <i class="far fa-clock"><span> 5 days ago</span></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="cards-container">
-                        <div class="card">
-                            <div class="card-img-info">
-                                <div class="card-img">
-                                    <img src="https://picsum.photos/90/90" alt="">
-                                </div>
-                                <div class="card-info">
-                                    <h3>Kasisto</h3>
-                                    <h2>Front-End Software Engineer</h2>
-                                    <button class="btn-time">Full time</button>
-                                </div>
-                            </div>                       
-                            <div class="card-location-time">
-                                <div class="location">
-                                    <i class="fas fa-globe-americas"><span> New York</span></i>
-                                    <i class="far fa-clock"><span> 5 days ago</span></i>
+                        <a href="./job-info.html">
+                            <div class="card">
+                                <div class="card-img-info">
+                                    <div class="card-img">
+                                        <img src="https://picsum.photos/90/90" alt="">
+                                    </div>
+                                    <div class="card-info">
+                                        <h3>Kasisto</h3>
+                                        <h2>Front-End Software Engineer</h2>
+                                        <button class="btn-time">Full time</button>
+                                    </div>
+                                </div>                       
+                                <div class="card-location-time">
+                                    <div class="location">
+                                        <i class="fas fa-globe-americas"><span> New York</span></i>
+                                        <i class="far fa-clock"><span> 5 days ago</span></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>  
                 </div>
                 
