--- a/Semana5-clase4/index.html
+++ b/Semana5-clase4/index.html
@@ -36,13 +36,13 @@
                     <input class="input" type="text" placeholder="City, state, zip code or country">
                 </div>
                 <div class="radio-options">
-                    <input type="radio" name="london" id="london">
+                    <input type="radio" name="country" id="london">
                     <label for="london">London</label><br>
-                    <input type="radio" name="amsterdam" id="amsterdam">
+                    <input type="radio" name="country" id="amsterdam">
                     <label for="amsterdam">Amsterdam</label><br>
-                    <input type="radio" name="new_york" id="new_york">
+                    <input type="radio" name="country" id="new_york">
                     <label for="new_york">New York</label><br>
-                    <input type="radio" name="berlin" id="berlin">
+                    <input type="radio" name="country" id="berlin">
                     <label for="berlin">Berlin</label><br>
                 </div>
             </div>
